[package]
name = "proxy_dll"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
ctor = "0.4.3"
windows = { version = "*", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Storage_FileSystem"] }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "*"
handlebars = "*"
object = { version = "*", features = ["default"] }
serde_json = "*"
widestring = "1.2.0"
windows = { version = "*", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Storage_FileSystem"] }
